<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewVoluntarioActivity">

    <ImageView
        android:id="@+id/imgCasaLogo"
        android:layout_width="325dp"
        android:layout_height="211dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/images" />

    <Button
        android:id="@+id/btnVoluntariar"
        android:layout_width="270dp"
        android:layout_height="60dp"

        android:layout_marginBottom="64dp"
        android:background="@drawable/btn_bonito"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/btnRegist"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtPassNew"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/txtHintPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lblBemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblBemVindo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCasaLogo"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtNomeApelido"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txtNomeApelido"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBemVindo"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNascimento"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtNascimento"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txtNascimento"
        android:inputType="datetime"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeApelido"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>