<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".WelcomeActivity"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnVoluntario"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"

        android:background="@drawable/btn_bonito"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/btnSouVoluntario"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVoluntariar" />

    <TextView
        android:id="@+id/lblAjuda"
        android:layout_width="296dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/PedirAjuda"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgCasaLogo"
        android:layout_width="323dp"
        android:layout_height="308dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/images" />

    <TextView
        android:id="@+id/lblAjuda1"
        android:layout_width="300dp"
        android:layout_height="69dp"
        android:layout_marginTop="35dp"
        android:text="@string/Introducao"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCasaLogo" />

    <Button
        android:id="@+id/btnVoluntariar"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"

        android:background="@drawable/btn_bonito"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/btnVoluntario"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAjuda1" />
</androidx.constraintlayout.widget.ConstraintLayout>